# bevy_boids

./: Cargo.toml  README.md
src/: constants.rs  hello_plugin.rs  main.rs
src/boid/: mod.rs
src/camera/: mod.rs
src/enemy/: mod.rs
src/player/: mod.rs  systems.rs
src/spatial_hash_map/: mod.rs
src/trail/: mod.rs  systems.rs
src/window_resize/: mod.rs
