[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
glam = "0.27.0"
rand = "0.8.5"
bevy-inspector-egui = "0.27.0"
bevy_spatial = "0.9.1"
bevy-fps-counter = "0.5.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
